<resources>
    <string name="app_name">OdontoKids</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Acerca de nosotros</string>
    <string name="welcome_text">Bienvenidos</string>
    <string name="recomentation">Esperamos que puedas obtener buenos resultados a partir de los ejercicios
                aqui planteados.</string>
    <string name="name_project">Terapias miofuncionales</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_praxias">Succión</string>
    <string name="title_oral_respiration">Respiración oral</string>
    <string name="title_deglucion">Deglución atipica</string>
    <string name="title_muscle_tasty">Fortalecimiento de los musculos intraorales</string>
    <string name="selection_video">Selecciona el video a reproducir:</string>
    <string name="title_about_us">Nuestro Equipo de Trabajo</string>
    <string name="facultad">Facultad de Odontología</string>
    <string name="year">2018</string>
    <string name="students">Estudiantes</string>
    <string name="student_1">Kenverly Alejandra Gutiérrez Tovar</string>
    <string name="student_2">Gabriela Escandón Salas</string>
    <string name="student_3">Luisa Alejandra Rodríguez Hernández</string>
    <string name="objetivos">Objetivos</string>
    <string name="objetivos_succion">1) Sensibilizar al paciente sobre el cierre de los labios en reposo.
                                    \n\n2) Fortalecer y tonificar los músculos de la cara y de la boca.
                                    \n\n3) Corregir el hábito.</string>
    <string name="objetivos_oral">  1) Concientizar al paciente de los malos hábitos que presenta y de los resultados que estos pueden ocasionar en la boca, dientes, y músculos.
                                    \n\n2) Corregir la manera como respira.
                                    </string>
    <string name="objetivos_oral1"> 3) Fortalecer los músculos de la respiración y por ende aumentar la capacidad de los pulmones para retener el máximo de aire.
                                    \n\n4) Mejorar la tensión de los labios.
                                    \n\n5) Mejorar la posición de la lengua durante el reposo.
                                   </string>
    <string name="objetivos_oral2">
                                    6) Causar el cierre de los labios en reposo.
                                    \n\n7) Eliminar el hábito de respirar por la boca.</string>
    <string name="objetivos_de_atipica">1) Fortalecer los músculos de la boca, la lengua, el paladar y la cara; para promover una adecuada alimentación.
                                        \n\n2) Promover el entendimiento acerca de la posición que debe ocupar la lengua dentro de la boca, y de la forma en como ésta se relaciona con los demás órganos (dientes, mejillas, labios).
                                        </string>
    <string name="objetivos_de_atipica1">3)Corregir el hábito.</string>
    <string name="my_points">Mis puntos</string>
    <string name="reset_points">Reiniciar Puntos</string>
    <string name="negative_popup_title_default">¡ADVERTENCIA!</string>
    <string name="negative_popup_text_default">ES NECESARIO ESTAR EN COMPAÑÍA DE UN ADULTO, REALIZAR EN NIÑOS MAYORES A 5 AÑOS.</string>
</resources>
